# WES_Scan

./: .gitignore  manage.py  pyproject.toml
core/: tasks.py
helpers/: serializers.py  shortcuts.py
members/: admin.py  filters.py  models.py  pagination.py  urls.py  views.py
members/api/: serializers.py  urls.py  views.py
members/migrations/: 0001_initial.py  0001_initial_squashed_0004_alter_member_slug.py  0002_auto_20230917_0946.py  0003_alter_date_date.py  0003_member_date_member_image_and_more.py  0004_alter_member_date.py  0005_member_last_activity.py  0006_member_created_at_member_updated_at.py  0007_rename_dates_member_activities.py
static/css/: font.css  style.css
templates/members/: list.html
wes_scan/: api_urls.py  asgi.py  urls.py  wsgi.py
wes_scan/settings/: __init__.py  base.py  local.py  production.py
